#
# Build test cases
#

INCLUDE_DIRECTORIES(${CUDA_INCLUDE} ${CUR_INCLUDE} ${EXTERNAL_INCLUDE})
LINK_LIBRARIES(cuthuem ${EXTERNAL_LIBS})
MESSAGE(STATUS "Externel lib: " ${EXTERNAL_LIBS})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/cutest)
FILE(GLOB TEST_SOURCES ${CUDA_BASE}/testsrc/*.cpp)
FOREACH (T ${TEST_SOURCES})
    GET_FILENAME_COMPONENT(TSTNAME ${T} NAME_WE)
    ADD_EXECUTABLE(${TSTNAME} ${T})
ENDFOREACH()
